--- a/src/components/chat/chat.component.sass
+++ b/src/components/chat/chat.component.sass
@@ -1,10 +1,12 @@
 /*chat*/
 .chat
+    display: none
     position: fixed
     right: 60px
     bottom: 60px
 
 .btnChat
+    display: none
     cursor: pointer
     background-color: #fff
     border-radius: 100%
