--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -24,6 +24,10 @@
 @font-face
   +font($SFUIText, #{$SFUIText}-Bold)
 
+html
+  scrollbar-color: #ff3a3a #fff
+  scrollbar-width: thin
+
 body
   font-family: $fontRegular
   // background: #eee
