--- a/src/components/productBlocks/productRsControls.component.pug
+++ b/src/components/productBlocks/productRsControls.component.pug
@@ -2,15 +2,19 @@
 section.productRsControls
     .wrapper 
         .productRsControlsRowFlex
-            .productRsControlsTitle
-                h4.page__title-h4 
-                    span.page_red Control your driving 
-                    | dynamic on the go
-            .productRsControlsImg
-                img(src="assets/images/png/imgRsChip3.png", alt="imgRsChip3")
-            .productRsControlsToggles
-                .productRsControlsToggelsItem Sport plus
-                .productRsControlsToggelsItem Sport
-                .productRsControlsToggelsItem Factory
-                .productRsControlsToggelsItem Eco
-                .productRsControlsToggelsItem Eco plus
+            .productRsControlsContainer
+                .productRsControlsTitle
+                    h4.page__title-h4 
+                        span.page_red Control your driving 
+                        | dynamic on the go
+                .productRsControlsImg
+                    picture 
+                        source(type="image/png" srcset="assets/images/png/imgProductRsControls-lg.png" media="(min-width: 992px)")
+                        source( type="image/png" srcset="assets/images/png/imgProductRsControls-sm.png" media="(min-width: 768px)")
+                        img(src="assets/images/png/imgProductRsControls-xs.png", alt="imgProductRsControls")
+                .productRsControlsToggles
+                    .productRsControlsToggelsItem Sport plus
+                    .productRsControlsToggelsItem.prev Sport
+                    .productRsControlsToggelsItem.active Factory
+                    .productRsControlsToggelsItem.next Eco
+                    .productRsControlsToggelsItem Eco plus
