--- a/src/components/productBlocks/productRsControls.component.sass
+++ b/src/components/productBlocks/productRsControls.component.sass
@@ -4,30 +4,133 @@
 
 .productRsControlsRowFlex
     +row-flex
+
+.productRsControlsContainer
+    overflow: hidden
+    position: relative
     border-radius: 15px
     background: #111111
     backdrop-filter: blur(35px)
-
-.productRsControlsTitle
-    width: 29%
-    margin-top: 6%
-    margin-left: 7%
-    .page__title-h4 
-        font-family: #{$SFUIDisplay}-Bold
-        
-        font-size: 36px
-        line-height: 59px
-
-.productRsControlsImg
-    margin-left: -5%
-
-.productRsControlsToggles
-    align-items: center
     display: flex
     flex-wrap: wrap
-    height: 160px
-    margin-top: 10%
+    +sm-block
+        margin-right: 4%
+    +md-block
+        margin: 0px 20px
+    +lg-block
+        margin: 0px 20px
+    &::after
+        content: ''
+        
+        position: absolute
+        width: 398.19px
+        height: 368.41px
+        top: 90%
+        right: 0
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+
+.productRsControlsTitle
+    width: 100%
+
+    display: block
+    padding-right: 22%
+    margin-top: 14%
+    margin-left: 9%
+    margin-bottom: 7%
+
+    +sm-block
+        padding-right: 24%
+        margin-top: 12%
+        margin-left: 7%
+        margin-bottom: 11%
+    +md-block
+        width: 33%
+        margin-top: 7%
+        margin-left: 6%
+        padding-right: 0
+    +lg-block
+        width: 33%
+        margin-top: 7%
+        margin-left: 6%
+        padding-right: 0
+
+    .page__title-h4 
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 24px
+        line-height: 36px
+
+        +sm-block
+            font-size: 36px
+            line-height: 59px
+            letter-spacing: 0.11em
+        +md-block
+            font-size: 36px
+            line-height: 59px
+            letter-spacing: 0.11em
+        +lg-block
+            font-size: 36px
+            line-height: 59px
+            letter-spacing: 0.11em
+        
+
+.productRsControlsImg
+    width: 100%
+    text-align: center
+    +sm-block
+        width: auto
+        margin-left: -3%
+    +md-block
+        width: auto
+        margin-left: -10%
+    +lg-block
+        width: auto
+        margin-left: -10%
+
+
+.productRsControlsToggles
+    display: block
+    width: 100%
+    font-size: 20px
+    line-height: 28px
+    font-weight: bold
+   
+    margin-top: 12%
+    margin-left: 11%
+
+    margin-bottom: 10%
+
+
+    +sm-block
+        width: 40%
+        margin-top: 7%
+        margin-left: 3%
+        margin-bottom: 0
+    +md-block  
+        width: 25%
+        margin-top: 8% 
+        margin-left: 0
+        margin-bottom: 0
+    +lg-block
+        width: 25%
+        margin-top: 8% 
+        margin-left: 0
+        margin-bottom: 0
+
 
 .productRsControlsToggelsItem
     display: flex
     width: 100%
+    padding: 11px 14px
+    opacity: 0.3
+    cursor: pointer
+    &:hover
+        background: rgba(196, 196, 196, 0.2)
+        border-radius: 20px 0px 0px 20px
+    &.active
+        background: rgba(196, 196, 196, 0.2)
+        border-radius: 20px 0px 0px 20px
+        opacity: 1
+    &.prev,
+    &.next
+        opacity: 0.7
