--- a/src/components/productBlocks/productRsSafest.component.sass
+++ b/src/components/productBlocks/productRsSafest.component.sass
@@ -1,5 +1,6 @@
 /*productRsSafest*/
 .productRsSafest
+    padding: 47px 0
 
 .productRsSafestRowFlex 
     +row-flex
@@ -8,16 +9,78 @@
     +size(9)
     +size-md(9/2)
     +size-lg(9/2)
+    text-align: center
 .productRsSafestText
     +col
     +size(9)
     +size-md(9/2)
     +size-lg(9/2)
+
+    padding-left: 6%
+    padding-top: 3%
+    +md-block
+        padding: 0
+    +lg-block
+        padding: 0
+
     .page__title-h4 
         font-family: #{$SFUIDisplay}-Bold
-        font-size: 36px
-        line-height: 59px
+        font-size: 24px
+        line-height: 36px
+       
         letter-spacing: 0.05em
+        margin-top: 9%
+
+        margin-bottom: 5%
+        
+        +sm-block
+
+            margin-top: 3%
+            margin-bottom: 7%
+            font-size: 36px
+            line-height: 59px
+        +md-block
+
+            margin-top: 3%
+            margin-bottom: 7%
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+
+            margin-top: 3%
+            margin-bottom: 7%
+            font-size: 36px
+            line-height: 59px
+        span
+            +sm-block
+                display: block
+            +md-block
+                display: block
+            +lg-block
+                display: block
+    .page__text
+        margin-left: 0
+        margin-right: 4%
 
 .productRsSafestIcons 
     display: flex
+    padding-top: 6%
+    +md-block
+        padding-top: 2%
+    +lg-block
+        padding-top: 2%
+   
+.productRsSafestIconsItem
+    margin-right: 14%
+    +sm-block
+        margin-right: 18%
+    +md-block
+        margin-right: 18%
+    +lg-block
+        margin-right: 18%
+
+.productRsSafestIconsText
+    font-family: #{$SFUIDisplay}-Bold
+    margin-top: 5%
+    font-size: 15px
+    line-height: 59px
