--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1456,6 +1456,9 @@ html
 /*installation*/
 .installation
 
+    .page__title-h2 
+        font-family: #{$SFUIDisplay}-Bold
+
 .installationRowFlex 
     +row-flex
 
@@ -1464,15 +1467,38 @@ html
     +size(12)
     +size-md(9/2)
     +size-lg(9/2)
+    order: 2
+    text-align: center
+    +md-block
+        order: 0
+    +lg-block
+        order: 0
 .installationText
     +col
     +size(12)
     +size-md(9/2)
     +size-lg(9/2)
+
+    padding-top: 9%
+    padding-left: 0
+    
+    +sm-block   
+        padding-left: 9%
+    +md-block
+        padding-left: 5%
+    +lg-block
+        padding-left: 5%
     p 
         font-family: #{$SFUIDisplay}-Bold
         font-size: 20px
         line-height: 31px
+
+        margin-bottom: 6%
+        padding-right: 0
+        +md-block
+            padding-right: 40%
+        +lg-block
+            padding-right: 40%
     
 /*advantages*/
 .advantages
