add product slider

--- a/src/pages/rs/rs.pug
+++ b/src/pages/rs/rs.pug
@@ -17,6 +17,8 @@ block content
 		include ../../components/productBlocks/productRsSafest.component.pug
 		include ../../components/productBlocks/howitwork.component.pug
 		include ../../components/productBlocks/installation.component.pug
+		include ../../components/productBlocks/installation.component.pug
+		include ../../components/productBlocks/productSlider.component.pug
 		include ../../components/faq/faq.component.pug
 block modals
 	
