--- a/src/components/productBlocks/productSlider.component.pug
+++ b/src/components/productBlocks/productSlider.component.pug
@@ -1,24 +1,59 @@
 section.productSlider
+    button.page__btn.page__btn_notTransparent DOWLOAD THE GUIDE
     .wrapper 
         h2.page__title-h2_small easy and fast
         h3.page__title-h3 Throttle response with no delay 
         .productSliderFlexContainer 
             .productSliderGallary
-
+                .productSliderGallary__Main.gallery-top
+                    .swiper-wrapper
+                        .swiper-slide
+                            img(src="assets/images/png/imgRsChipSliderMain.png", alt="productSliderGallary")
+                        .swiper-slide
+                            img(src="assets/images/png/imgRsChipSliderMain.png", alt="productSliderGallary")
+                
+                        .swiper-slide
+                            img(src="assets/images/png/imgRsChipSliderMain.png", alt="productSliderGallary")
+                
+                        .swiper-slide
+                            img(src="assets/images/png/imgRsChipSliderMain.png", alt="productSliderGallary")
+                
+                    
+                .productSliderGallary__Thumbnails.gallery-thumbs
+                    .swiper-wrapper
+                        .swiper-slide
+                            img(src="assets/images/png/imgChipSlidermin.png", alt="productSliderGallary")
+                        .swiper-slide
+                            img(src="assets/images/png/imgChipSlidermin.png", alt="productSliderGallary")
+                        .swiper-slide
+                            img(src="assets/images/png/imgChipSlidermin.png", alt="productSliderGallary")
+                        .swiper-slide
+                            img(src="assets/images/png/imgChipSlidermin.png", alt="productSliderGallary")
+            
             .productSliderAdvantages
                 .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconSpeedometerGray.svg-iconSpeedometerGray-box
                     p Better driving dynamic
                 .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconWheel.svg-iconWheel-box
+                    p Backup CPU
+
+                .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconChipGray.svg-iconChipGray-box
                     p Five driving modes
                 .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconPinion.svg-iconPinion-box
+                    p No lag or delay
+
+                .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconRudder.svg-iconRudder-box
                     p Easy to install
                 .productSliderAdvantagesItem 
-                    p Backup CPU
-                .productSliderAdvantagesItem 
-                    p No lag or delay
-                .productSliderAdvantagesItem 
+                    .productSliderAdvantagesItemIcon.svg-iconHybrEng.svg-iconHybrEng-box
                     p ICE, BEV and hybrid engines
+
                 .productSliderPrice 
                     button.page__btn ADD TO BAG
                     .productPrice__cost $299
+                .productSliderText *Real world gains may be less or more depending on a large number of contributing factors such as displacement, aspiration and selected tuning mode.
 
