--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1745,7 +1745,184 @@ html
     font-size: 15px
     line-height: 59px
 
+.productSlider
+    background: #111111
+    padding: 80px 0
+    +sm-block
+        padding: 107px 0
+    +md-block
+        padding: 138px 0
+    +lg-block
+        padding: 138px 0
+    text-align: center
+    .page__title-h2_small
+        text-align: center
+        margin-top: 22%
+        +md-block
+            margin-top: 10%
+        +lg-block
+            margin-top: 10%
 
+    .page__title-h3
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 24px
+        line-height: 30px
+
+        text-align: center
+        margin: 30px auto 50px
+        width: 70%
+        +sm-block
+            width: 100%
+            margin: 10px auto 30px
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            width: 100%
+            margin: 10px auto 0px
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            width: 100%
+            margin: 10px auto 0px
+            font-size: 36px
+            line-height: 59px
+    .productSliderPrice
+        text-align: center
+        display: flex
+        flex-direction: column-reverse
+        align-items: center
+        width: 100%
+        margin-top: 6%
+
+        +sm-block
+            display: block
+            margin-top: 5%
+        +md-block
+            display: block
+            text-align: left
+            margin-top: 13%
+        +lg-block
+            display: block
+            text-align: left
+            margin-top: 13%
+       
+    .productPrice__cost
+        +sm-block
+            margin-left: 75px
+        +md-block
+            margin-left: 75px
+        +lg-block
+            margin-left: 75px
+
+.productSliderFlexContainer
+    +row-flex
+    padding-top: 3%
+    +sm-block
+        padding-top: 3%
+    +md-block
+        padding-top: 6%
+    +lg-block
+        padding-top: 6%
+.productSliderGallary
+    +col
+    +size(9)
+    +size-md(3.8)
+    +size-lg(3.8)
+    &__Main
+        overflow: hidden
+        margin-bottom: 45px
+        +sm-block
+            margin-bottom: 45px
+        +md-block
+            margin-bottom: 30px
+        +lg-block
+            margin-bottom: 30px
+    &__Thumbnails
+        +sm-block
+            width: 65%
+            margin: 0 auto
+        +md-block   
+            width: 100%
+        +lg-block   
+            width: 100%
+
+        &.gallery-thumbs
+            .swiper-wrapper
+                transform: translate3d(0px,0,0) !important
+            .swiper-slide
+                opacity: 0.4
+                height: 100px
+                display: flex
+                align-items: center
+                justify-content: center
+            .swiper-slide-active
+                opacity: 1
+                border: 1px solid
+                border-radius: 15px
+
+.productSliderAdvantages
+    +col
+    +size(9)
+    +size-md(5)
+    +size-lg(5)
+    +shift-md-left(0.2)
+    +shift-lg-left(0.2)
+    display: flex
+    flex-wrap: wrap
+    align-self: flex-start
+
+    padding-top: 5%
+    +sm-block
+        padding-left: 7%
+    +md-block
+        padding-top: 12px
+        padding-left: 0
+    +lg-block
+        padding-top: 12px
+        padding-left: 0
+
+.productSliderAdvantagesItem
+    display: flex
+    align-items: center
+    padding: 14px 0
+    +sm-block
+        width: 50%
+    +md-block
+        width: 50%
+    +lg-block
+        width: 50%
+    p
+        font-family: #{$SFUIDisplay}-Bold
+
+.productSliderAdvantagesItemIcon
+    margin-right: 15px
+
+.productSliderText
+    font-size: 15px
+    line-height: 26px
+    color: #B2B2B2
+    opacity: 0.5
+
+    width: 70%
+    margin: 55px auto 0
+
+    +sm-block
+        width: 100%
+        margin-top: 45px
+        
+   
+    +md-block
+        width: 100%
+        text-align: left
+        margin-top: 13%
+        margin-top: 45px
+
+    +lg-block
+        width: 100%
+        text-align: left
+        margin-top: 13%
+        margin-top: 45px
+  
 /*productRsSlider*/
 /*products*/
 .products
