--- a/src/components/productBlocks/product.component.sass
+++ b/src/components/productBlocks/product.component.sass
@@ -34,6 +34,12 @@
             margin: 15px auto -40px
             font-size: 36px
             line-height: 59px
+    &.productChip
+        .page__title-h3
+            width: 50%
+            margin: 15px auto 0
+        .page__title-h4
+            margin-top: 50px
 
 .productFlexContainer 
     +row-flex
