--- a/src/components/productBlocks/productChip/productChip.component.pug
+++ b/src/components/productBlocks/productChip/productChip.component.pug
@@ -1,5 +1,5 @@
 //-productRs
-section.product.productRs
+section.product.productChip
     .wrapper
         h2.page__title-h2_small More Power
         h3.page__title-h3 Increase your 
