--- a/src/pages/chip/chip.pug
+++ b/src/pages/chip/chip.pug
@@ -9,9 +9,10 @@ block title
 block append style
 
 block content
-	main.page.pageRs
+	main.page.pageChip
 		//- include ../../components/banner/bannerRs.component.pug
 		include ../../components/productBlocks/productChip/productAdvantagesChip.component.pug
+		include ../../components/productBlocks/productChip/power.component.pug
 		include ../../components/productBlocks/productChip/productChip.component.pug
 		include ../../components/productBlocks/productChip/productSliderChip.component.pug
 		include ../../components/faq/faq.component.pug
