--- a/src/components/productBlocks/productChip/power.component.sass
+++ b/src/components/productBlocks/productChip/power.component.sass
@@ -83,6 +83,7 @@
     +shift-lg-left(-2)
 
     padding-left: 3%
+    text-align: center
     +sm-block
         display: flex
         align-items: flex-end
