--- a/src/pages/chip/chip.pug
+++ b/src/pages/chip/chip.pug
@@ -13,6 +13,8 @@ block content
 		//- include ../../components/banner/bannerRs.component.pug
 		include ../../components/productBlocks/productChip/productAdvantagesChip.component.pug
 		include ../../components/productBlocks/productChip/power.component.pug
+		include ../../components/productBlocks/productChip/steps.component.pug
+		include ../../components/productBlocks/productChip/howitworkChip.component.pug
 		include ../../components/productBlocks/productChip/productChip.component.pug
 		include ../../components/productBlocks/productChip/productSliderChip.component.pug
 		include ../../components/faq/faq.component.pug
