--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1783,6 +1783,56 @@ html
        
     .icon
         margin: 0 15px
+.howitworkChip
+    padding: 60px 0
+    .page__title-h2_small
+        text-align: center
+    .page__title-h3
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 36px
+        line-height: 59px
+        
+        text-align: center
+        margin-top: 8px
+        +sm-block
+            margin-bottom: 40px
+        +md-block   
+            margin-bottom: 52px
+        +lg-block   
+            margin-bottom: 52px
+
+.howitworkChipRowFlex
+    +row-flex
+
+.howitworkChipCol
+    +col
+    +size(9)
+    +size-md(9/2)
+    +size-lg(9/2)
+
+.howitworkChipText
+    margin-bottom: 54px
+    color: #B2B2B2
+    font-size: 15px
+    line-height: 26px
+    letter-spacing: 0.02em
+    +md-block
+        padding-right: 14%
+    +lg-block
+        padding-right: 14%
+
+.howitworkChipImg 
+    
+    display: flex
+    justify-content: center
+
+    +sm-block
+        margin-top: 9%
+    +md-block
+        margin-top: 16%
+    +lg-block
+        margin-top: 16%
+
 .power
     padding: 100px 0
 
@@ -1868,6 +1918,7 @@ html
     +shift-lg-left(-2)
 
     padding-left: 3%
+    text-align: center
     +sm-block
         display: flex
         align-items: flex-end
@@ -1967,6 +2018,84 @@ html
         justify-content: space-between
         span
             background: #54CA52
+
+.setps
+    .page__title-h2_small
+        text-align: center
+        
+    .page__title-h3
+        font-family: #{$SFUIDisplay}-Bold
+        text-align: center
+        font-weight: 800
+
+        font-size: 24px
+        line-height: 30px
+
+        margin-bottom: 32px
+        
+        +sm-block
+            width: 75%
+            margin: 8px auto 50px
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            margin: 8px auto 60px
+            width: 48%
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            margin: 8px auto 60px
+            width: 48%
+            font-size: 36px
+            line-height: 59px
+
+.stepsItems
+    +row-flex
+    flex-direction: column
+    align-items: center
+
+    +md-block
+        flex-direction: row
+        align-items: flex-start
+    +lg-block
+        flex-direction: row
+        align-items: flex-start
+
+.stepsItem
+    +col
+    +size(9)
+    +size-sm(9/2)
+    +size-md(3)
+    +size-lg(3)
+
+    margin-bottom: 8%
+    
+    &__Img
+        background: #FFFFFF
+        box-shadow: -15px 25px 30px rgba(0, 0, 0, 0.1)
+        border-radius: 15px
+        display: flex
+        justify-content: center
+        align-items: flex-end
+        overflow: hidden
+        margin-bottom: 24px
+
+        img
+            object-fit: cover
+    &__Title
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 24px
+        line-height: 52px
+        margin-bottom: 16px
+        text-align: center
+
+    &__Description
+        color: #B2B2B2
+        font-size: 15px
+        line-height: 26px
+        text-align: center
+        width: 70%
+        margin: 0 auto
 
 /*howitwork*/
 .howitwork
