--- a/src/components/productBlocks/productChip/howitworkChip.component.sass
+++ b/src/components/productBlocks/productChip/howitworkChip.component.sass
@@ -2,6 +2,10 @@
     padding: 60px 0
     .page__title-h2_small
         text-align: center
+        +md-block   
+            text-align: left
+        +lg-block   
+            text-align: left
     .page__title-h3
         font-family: #{$SFUIDisplay}-Bold
         font-size: 36px
@@ -13,8 +17,10 @@
             margin-bottom: 40px
         +md-block   
             margin-bottom: 52px
+            text-align: left
         +lg-block   
             margin-bottom: 52px
+            text-align: left
 
 .howitworkChipRowFlex
     +row-flex
