--- a/src/pages/chip/chip.pug
+++ b/src/pages/chip/chip.pug
@@ -15,6 +15,7 @@ block content
 		include ../../components/productBlocks/productChip/power.component.pug
 		include ../../components/productBlocks/productChip/steps.component.pug
 		include ../../components/productBlocks/productChip/howitworkChip.component.pug
+		include ../../components/productBlocks/productChip/performance.component.pug
 		include ../../components/productBlocks/productChip/productChip.component.pug
 		include ../../components/productBlocks/productChip/productSliderChip.component.pug
 		include ../../components/faq/faq.component.pug
